# quickfontview

./: .gitignore  CMakeLists.txt  info.mcendu.quickfontview.desktop
src/: CMakeLists.txt  Descriptions.cpp  Descriptions.h  FeaturesDrawer.qml  FontFeature.cpp  FontFeature.h  FontFeatures.cpp  FontFeatures.h  FontPage.qml  FontScanner.cpp  FontScanner.h  FontView.qml  Main.qml  VariableAxis.cpp  VariableAxis.h  main.cpp
tests/: CMakeLists.txt  FontScanner.cpp
